<resources>
    <string name="app_name">DSM Desafio Practico 01</string>
    <string name="main_grades">Promedio de Notas</string>
    <string name="main_salary">Salario de Empleado</string>

    <string name="main_calculator">Calculadora Basica</string>
    <string name="cal_operand1">Operando 1:</string>
    <string name="cal_operand2">Operando 2:</string>
    <string name="cal_operator">Operador:</string>
    <string name="cal_result">Resultado:</string>
    <!-- Operators -->
    <string name="cal_add">Suma</string>
    <string name="cal_sub">Resta</string>
    <string name="cal_mul">Multiplicacion</string>
    <string name="cal_div">Division</string>
    <string name="cal_pow">Exponente</string>
    <string name="cal_sqrt">Raiz Cuadrada</string>
    <!-- Messages -->
    <string name="cal_no_operand1">Operando 1 no es un numero</string>
    <string name="cal_no_operand2">Operando 2 no es un numero</string>
    <string name="cal_0division">(imposible dividir por 0)</string>
    <string name="cal_negative_root">(raizes negativas son numeros complejos)</string>
</resources>