<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calculator_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout style="@style/Vertical.Section">

        <TextView
            style="@style/Vertical.TextView"
            android:labelFor="@id/cal_operand1"
            android:text="@string/cal_operand1" />

        <EditText
            android:id="@+id/cal_operand1"
            style="@style/Vertical.EditText"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Space style="@style/Vertical.Spacer" />

    <LinearLayout style="@style/Vertical.Section">

        <TextView
            style="@style/Vertical.TextView"
            android:labelFor="@id/cal_operand2"
            android:text="@string/cal_operand2" />

        <EditText
            android:id="@+id/cal_operand2"
            style="@style/Vertical.EditText"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Space style="@style/Vertical.Spacer" />

    <LinearLayout style="@style/Vertical.Section">

        <TextView
            style="@style/Vertical.TextView"
            android:text="@string/cal_operator" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2"
            android:useDefaultMargins="true">

            <RadioButton
                android:id="@+id/cal_add"
                style="@style/Vertical.TextView"
                android:text="@string/cal_add" />

            <RadioButton
                android:id="@+id/cal_mul"
                style="@style/Vertical.TextView"
                android:text="@string/cal_mul" />

            <RadioButton
                android:id="@+id/cal_pow"
                style="@style/Vertical.TextView"
                android:text="@string/cal_pow" />

            <RadioButton
                android:id="@+id/cal_sub"
                style="@style/Vertical.TextView"
                android:text="@string/cal_sub" />

            <RadioButton
                android:id="@+id/cal_div"
                style="@style/Vertical.TextView"
                android:text="@string/cal_div" />

            <RadioButton
                android:id="@+id/cal_sqrt"
                style="@style/Vertical.TextView"
                android:text="@string/cal_sqrt" />

        </GridLayout>
    </LinearLayout>

    <Space style="@style/Vertical.Spacer" />

    <LinearLayout style="@style/Vertical.Section">

        <TextView
            style="@style/Vertical.TextView"
            android:text="@string/cal_result" />

        <TextView
            android:id="@+id/cal_result"
            style="@style/Vertical.EditText" />

    </LinearLayout>

</LinearLayout>